--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
 
     <!-- Default text for failure of loading the earthquakes -->
     <string name="failure">Failure of loading the earthquakes</string>
+    <string name="try_again">Try Again</string>
 </resources>
