--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,12 @@
     <!-- Default text for no internet connection -->
     <string name="no_internet_connection">No Internet Connection.</string>
 
+    <!-- Default text for check your internet connection -->
+    <string name="check_internet_connection">Please Check your Internet Connection.</string>
+
     <!-- Default text for failure of loading the earthquakes -->
     <string name="failure">Failure of loading the earthquakes</string>
+
+    <!-- Default text for try again -->
     <string name="try_again">Try Again</string>
 </resources>
