--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,12 @@
     <!-- The name of the application -->
     <string name="app_name">Earthquake Report</string>
 
+    <string name="recent_earthquakes">Recent Earthquakes</string>
+
+    <string name="app_detail">Earthquake Detail</string>
+
+    <string name="app_trivia">Earthquake Trivia</string>
+
     <!-- Default text to show with the properties location ("Near the Pacific-Antarctic Ridge")
     if no specific kilometer distance from the primary location is given [CHAR LIMIT=30] -->
     <string name="near_the">Near the</string>
@@ -10,14 +16,30 @@
     <string name="no_earthquakes">No earthquakes found.</string>
 
     <!-- Default text for no internet connection -->
-    <string name="no_internet_connection">No Internet Connection.</string>
+    <string name="no_internet_connection">No Internet Connection</string>
 
     <!-- Default text for check your internet connection -->
-    <string name="check_internet_connection">Please Check your Internet Connection.</string>
+    <string name="check_internet_connection">Please Check Your Internet Connection</string>
 
     <!-- Default text for failure of loading the earthquakes -->
     <string name="failure">Failure of loading the earthquakes</string>
 
     <!-- Default text for try again -->
     <string name="try_again">Try Again</string>
+
+    <!-- Default text for people felt it -->
+    <string name="people_felt">People Felt It</string>
+
+    <!-- Default text for view more information -->
+    <string name="view_more">View more information</string>
+
+    <string name="location">Location: </string>
+
+    <string name="depth">Depth: </string>
+
+    <!-- Default text for tsunami alert -->
+    <string name="tsunami_alert">Tsunami Alert:</string>
+    <string name="earthquakes">Earthquakes</string>
+    <string name="trivia">Trivia</string>
+
 </resources>
